logo no longer follows on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,9 @@ h3 {
 } 
 /*smaller screens*/
 @media (max-width: 667px) {
+  .logo-container{
+    position:relative;
+  }
   .nav-links {
     display: none;
     position: absolute;
@@ -907,7 +910,9 @@ svg path {
     width: 85px;
     height: 80px;
   }
+
 }
+
 
 /* iPad screen */
 @media (min-width: 800px) and (max-width: 1100px) {
